# toy_lang

./: .clang-format  CMakeLists.txt
source/: eval.cpp  file.cpp  highlight.cpp  lexer.cpp  main.cpp  parser.cpp  repl.cpp  util.cpp
source/include/: ast.h  defs.h  precompile.h  result.h
